# kds-sms-server

./: .gitignore  .pdm-python  Dockerfile  README.md  build.py  build_number.json  check_sms_server.py  check_smsserver.py  docker-compose.yml  installer.nsi  pack.py  pyproject.toml  requriements-client.txt  requriements.txt  settings.json  settings_example.json  sms_server.py  sms_server.spec  sms_server_service.py  static.ini
.github/workflows/: build_and_publish.yml
classes/: Logger.py  LoggingMiddleware.py  MetricServer.py  SMSBaseGateway.py  SMSServer.py  SMSServerHandler.py  Settings.py  Static.py  TCPServer.py  TeltonikaModem.py
functions/: increase_build_number.py  main.py
models/: MetricModel.py  ModemMetricModel.py  StatusModel.py
src/kds_sms_server/: __init__.py  admin.py  base.py  base_config.py  cli.py  db.py  listener.py  logger.py  settings.py  sms_server.py  worker.py
src/kds_sms_server/gateways/: __init__.py  base.py  gateway.py  teltonika.py  vonage.py
src/kds_sms_server/gateways/teltonika/: gateway.py
src/kds_sms_server/gateways/vonage/: config.py  gateway.py
src/kds_sms_server/server/: __init__.py  api.py  api_server.py  base.py  server.py  tcp.py  tcp_server.py
src/kds_sms_server/server/api/: config.py  server.py
src/kds_sms_server/server/tcp/: config.py  server.py
src/kds_sms_server/server/ui/: config.py  server.py
src/kds_sms_server/server/ui/templates/: create.html  detail.html  layout.html  list.html
src/kds_sms_server/statics/: ascii_logo.py
src/sms_broker/: cli.py  settings.py
src/sms_broker/gateways/vonage/: config.py  gateway.py
src/sms_broker/server/api/: server.py
src/sms_broker/statics/: ascii_logo.py
src/sms_server/: __main__.py  cli.py  settings.py  sms_server.py
src/sms_server/gateways/: __init__.py  base.py  teltonika.py  vonage.py
