[project]
name = "kds-sms-server"
dynamic = ["version"]
description = "A broker server for sending SMS."
authors = [
    { name = "Julius Koenig", email = "julius.koenig@kds-kg.de" },
]
dependencies = ["typer>=0.16.0", "chardet>=5.2.0", "requests>=2.32.3", "pythonping>=1.1.4", "vonage>=4.4.3", "fastapi>=0.115.12", "uvicorn>=0.34.3", "python-multipart>=0.0.20", "email-validator>=2.2.0", "wiederverwendbar[rich,sqlalchemy]>=0.8.6", "starlette-admin[i18n]>=0.15.1"]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
kds-sms-server = "kds_sms_server.cli:cli_app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/kds_sms_server/__init__.py"

[tool.pdm.scripts]
push-tags = { shell = "git push origin --tags" }
