[project]
name = "sms-broker"
dynamic = ["version"]
description = "A broker server for sending SMS."
authors = [
    { name = "Julius Koenig", email = "info@bastelquartier.de" },
]
dependencies = ["typer>=0.16.0", "chardet>=5.2.0", "requests>=2.32.4", "pythonping>=1.1.4", "vonage>=4.4.3", "fastapi>=0.115.13", "uvicorn>=0.34.3", "python-multipart>=0.0.20", "email-validator>=2.2.0", "wiederverwendbar[rich,sqlalchemy]>=0.9.0", "starlette-admin[i18n]>=0.15.1", "pymysql>=1.1.1", "itsdangerous>=2.2.0"]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
sms-broker = "sms_broker.cli:cli_app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/sms_broker/__init__.py"

[tool.pdm.scripts]
push-tags = { shell = "git push origin --tags" }
